Fixed .is-full content on Firefox

--- a/docs/_sass/components/_hero.scss
+++ b/docs/_sass/components/_hero.scss
@@ -6,6 +6,6 @@
     h2 {
         font-size: 2rem;
 
-        max-width: 600px;
+        max-width: 650px;
     }
 }
