--- a/scss/layout/app.scss
+++ b/scss/layout/app.scss
@@ -15,7 +15,7 @@
         flex: 1;
 
         width: 100%;
-        height: auto;
+        height: 100%;
 
         overflow-x: hidden;
         overflow-y: auto;
